--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="index.css">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <script type="text/javascript" src="test.js"></script>
-<title>Jack Garbus' portfolio site!</title>
+<title>Jack Garbus</title>
 <!--<div class="nav">
 	<h1>Navigation</h1>
 	<p> <a href="test2.html">hi</a></p>
