--- a/Shorts.html
+++ b/Shorts.html
@@ -1,1 +1,6 @@
-<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Shorts</title> <meta name=viewport content="width=device-width, initial-scale=1.0" /> </head> <p id="header"><a id="menuitem" href="index">Shorts</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p> <p>All short stories I’ve written:</p> <ul> <li><a href="Short-Aftermath">Aftermath</a></li> </ul> </main></html>
+<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Shorts</title> <meta name=viewport content="width=device-width, initial-scale=1.0" /> </head> <p id="header"><a id="menuitem" href="index">Shorts</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p>
+<p>All short stories I’ve written:</p>
+<ul>
+<li><a href="Short-Aftermath">Aftermath</a></li>
+</ul>
+</main></html>
