--- a/Contact.html
+++ b/Contact.html
@@ -1,1 +1,7 @@
-<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Contact</title> <meta name=viewport content="width=device-width, initial-scale=1.0" /> </head> <p id="header"><a id="menuitem" href="index">Contact</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p> <ul> <li>Twitter: <a href="https://twitter.com/jarbus_">@jarbus_</a></li> <li>Github: <a href="https://github.com/jarbus">@jarbus</a></li> <li>Email: <a href="mailto:jarbus@tutanota.com">jarbus@tutanota.com</a></li> </ul> </main></html>
+<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Contact</title> <meta name=viewport content="width=device-width, initial-scale=1.0" /> </head> <p id="header"><a id="menuitem" href="index">Contact</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p>
+<ul>
+<li>Twitter: <a href="https://twitter.com/jarbus_">@jarbus_</a></li>
+<li>Github: <a href="https://github.com/jarbus">@jarbus</a></li>
+<li>Email: <a href="mailto:jarbus@tutanota.com">jarbus@tutanota.com</a></li>
+</ul>
+</main></html>
