--- a/Perspective.html
+++ b/Perspective.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Perspective</title> <meta name=viewport content="width=device-width, initial-scale=1.0" /> </head> <p id="header"><a id="menuitem" href="index">Perspective</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p> <p>Posts sharing my perspective on life.</p> <ul> <li><a href="Critical-Thinking">Critical-Thinking</a></li> <li><a href="Anonymity">Anonymity</a></li> <li><a href="Forgiveness">Forgiveness</a></li> <li><a href="Happiness">Happiness</a></li> <li><a href="Balance">Balance</a></li> </ul> </main></html>
+<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Perspective</title> <meta name=viewport content="width=device-width, initial-scale=1.0" /> </head> <p id="header"><a id="menuitem" href="index">Perspective</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p>
+<p>Posts sharing my perspective on life.</p>
+<ul>
+<li><a href="Critical-Thinking">Critical-Thinking</a></li>
+<li><a href="Anonymity">Anonymity</a></li>
+<li><a href="Forgiveness">Forgiveness</a></li>
+<li><a href="Happiness">Happiness</a></li>
+<li><a href="Balance">Balance</a></li>
+</ul>
+</main></html>
