--- a/Posts.html
+++ b/Posts.html
@@ -1,1 +1,32 @@
-<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Posts</title> <meta name=viewport content="width=device-width, initial-scale=1.0" /> </head> <p id="header"><a id="menuitem" href="index">Posts</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p> <p>Newest Post:</p> <ul> <li><a href="Tesla-and-False-Advertising-In-AI">Tesla and False Advertising in AI</a></li> </ul> <p>Favorite Posts:</p> <ul> <li><a href="Short-Aftermath">Short: Aftermath</a></li> <li><a href="Forgiveness">Forgiveness</a></li> <li><a href="Anonymity">Anonymity</a></li> <li><a href="Critical-Thinking">Critical Thinking</a></li> </ul> <p>Categories:</p> <ul> <li><a href="Perspective">Perspective</a></li> <li><a href="Technology">Technology</a></li> <li><a href="Shorts">Short Stories</a></li> </ul> <p>All posts:</p> <ul> <li><a href="Critical-Thinking">Critical Thinking</a></li> <li><a href="Short-Aftermath">Short: Aftermath</a></li> <li><a href="Anonymity">Anonymity</a></li> <li><a href="Forgiveness">Forgiveness</a></li> <li><a href="Happiness">Happiness</a></li> <li><a href="AI-Index">AI-Index</a></li> <li><a href="Balance">Balance</a></li> <li><a href="Bitcoin-Whitepaper,-Explained">Bitcoin Whitepaper, Explained</a></li> <li><a href="Visualization-of-a-Basic-Neural-Network-in-Python">Visualization of a Basic Neural Network in Python</a></li> <li><a href="Tesla-and-False-Advertising-In-AI">Tesla and False Advertising in AI</a></li> </ul> </main></html>
+<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Posts</title> <meta name=viewport content="width=device-width, initial-scale=1.0" /> </head> <p id="header"><a id="menuitem" href="index">Posts</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p>
+<p>Newest Post:</p>
+<ul>
+<li><a href="Tesla-and-False-Advertising-In-AI">Tesla and False Advertising in AI</a></li>
+</ul>
+<p>Favorite Posts:</p>
+<ul>
+<li><a href="Short-Aftermath">Short: Aftermath</a></li>
+<li><a href="Forgiveness">Forgiveness</a></li>
+<li><a href="Anonymity">Anonymity</a></li>
+<li><a href="Critical-Thinking">Critical Thinking</a></li>
+</ul>
+<p>Categories:</p>
+<ul>
+<li><a href="Perspective">Perspective</a></li>
+<li><a href="Technology">Technology</a></li>
+<li><a href="Shorts">Short Stories</a></li>
+</ul>
+<p>All posts:</p>
+<ul>
+<li><a href="Critical-Thinking">Critical Thinking</a></li>
+<li><a href="Short-Aftermath">Short: Aftermath</a></li>
+<li><a href="Anonymity">Anonymity</a></li>
+<li><a href="Forgiveness">Forgiveness</a></li>
+<li><a href="Happiness">Happiness</a></li>
+<li><a href="AI-Index">AI-Index</a></li>
+<li><a href="Balance">Balance</a></li>
+<li><a href="Bitcoin-Whitepaper,-Explained">Bitcoin Whitepaper, Explained</a></li>
+<li><a href="Visualization-of-a-Basic-Neural-Network-in-Python">Visualization of a Basic Neural Network in Python</a></li>
+<li><a href="Tesla-and-False-Advertising-In-AI">Tesla and False Advertising in AI</a></li>
+</ul>
+</main></html>
