--- a/Blogging-with-Shell-Scripts-and-Markdown.html
+++ b/Blogging-with-Shell-Scripts-and-Markdown.html
@@ -23,7 +23,6 @@
 <p>The <a href="/Posts">Posts</a>, <a href="/About">About</a>, <a href="jarbus.net">Index</a>, and <a href="/Contact">Contact</a> pages all maintained as above. I used to have a script to automatically recreate my <a href="/Posts">Posts</a> page to add new entries, but found that I much prefer the curated &amp; categorical page I have now.</p>
 <p id="header2" id="rss">RSS</p id="header2">
 <p>I also have an <a href="feed">rss feed</a>, which I update manually. However, given that adding a new entry simply requires putting</p>
-<p><code></p>
 <pre><code>&lt;item&gt;
   &lt;title&gt;
     PostName
@@ -31,12 +30,8 @@
   &lt;link&gt;
     https://www.jarbus.net/PostName
   &lt;/link&gt;
-  &lt;description&gt;
-      New Post: PostName
-  &lt;/description&gt;
 &lt;/item&gt;</code></pre>
-<p></code></p>
-<p>at the top of my feed file, I think I’ll manage. Plus, I enjoy the ability to change the title &amp; description on a post by post basis.</p>
+<p>at the top of my feed file, I think I’ll manage. Plus, I enjoy the ability add custom tags on a post by post basis if I decide to.</p>
 <p id="header2" id="final-thoughts">Final Thoughts</p id="header2">
 <p>Overall, I’m really happy with how the site turned out–I have absolute control over all aspects of my blog while doing negligible content management. I have lighting-fast load times, a minimal interface, and can fix any aspect of my site were something to break.</p>
 </main></html>
