bigger opg test

--- a/Blogging-with-Shell-Scripts-and-Markdown.html
+++ b/Blogging-with-Shell-Scripts-and-Markdown.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Blogging with Shell Scripts and Markdown</title> <meta name=viewport content="width=device-width, initial-scale=1.0" /> </head> <p id="header"><a id="menuitem" href="index">Blogging with Shell Scripts and Markdown</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p>
+
 <p>I manage this website with markdown and a shell scripts. Here’s how.</p>
 <p id="header2" id="what-i-wanted-when-designing-my-site">What I wanted when designing my site:</p id="header2">
 <ul>
 <li>Fast load time</li>
-<li>Minimal Interface</li>
+<li>Minimal interface</li>
 <li>A site directory</li>
 <li>Readable URLs</li>
 </ul>
 <p id="header2" id="what-i-didnt-want-when-designing-my-site">What I didn’t want when designing my site:</p id="header2">
 <ul>
-<li>Javascript</li>
+<li>JavaScript</li>
 <li>A fancy framework</li>
 <li>Site analytics/admin interface</li>
 <li>Large files</li>
