--- a/About.html
+++ b/About.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>About</title> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> </head> <meta property="og:title" content="About | jarbus.net" /> <meta property="og:type" content="website" /> <meta property="og:url" content="https://www.jarbus.net/About" /> <p id="header"><a id="menuitem" href="index">About</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p>
 <p>Hi! My name’s Jack.</p>
 <p>I’m a:</p>
 <ul>
