--- a/Blogging-with-Shell-Scripts-and-Markdown.html
+++ b/Blogging-with-Shell-Scripts-and-Markdown.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Blogging with Shell Scripts and Markdown</title> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> </head> <meta property="og:title" content="Blogging with Shell Scripts and Markdown | jarbus.net" /> <meta property="og:type" content="website" /> <meta property="og:url" content="https://www.jarbus.net/Blogging-with-Shell-Scripts-and-Markdown" /> <p id="header"><a id="menuitem" href="index">Blogging with Shell Scripts and Markdown</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p>
 <p>I manage this website with markdown and a shell scripts. Here’s how.</p>
 <p id="header2" id="what-i-wanted-when-designing-my-site">What I wanted when designing my site:</p id="header2">
 <ul>
