--- a/Forgiveness.html
+++ b/Forgiveness.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Forgiveness</title> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> </head> <meta property="og:title" content="Forgiveness | jarbus.net" /> <meta property="og:type" content="website" /> <meta property="og:url" content="https://www.jarbus.net/Forgiveness" /> <p id="header"><a id="menuitem" href="index">Forgiveness</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p>
 <p>Forgiveness has a negative connotation these days. We see forgiving each other as weak — as not standing by one’s values, as giving up one’s pride. This view is incredibly counter-productive and, in my opinion, the cause of many problems in today’s society. Here is the actual definition of forgiveness:</p>
 <blockquote>
 <p>forgive (verb)</p>
