--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <ul>
 <li>Graduate student studying artificial intelligence.</li>
 <li>Open source software enthusiast</li>
-<li>Crpytocurrency user</li>
+<li>Cryptocurrency user</li>
 <li>Decentralization advocate</li>
 <li>Amateur chef</li>
 <li>Amateur gardener</li>
