--- a/Perspective.html
+++ b/Perspective.html
@@ -5,6 +5,7 @@
 <li><a href="Anonymity">Anonymity</a></li>
 <li><a href="Forgiveness">Forgiveness</a></li>
 <li><a href="Happiness">Happiness</a></li>
+<li><a href="Soft-Rules">Soft Rules</a></li>
 <li><a href="Balance">Balance</a></li>
 </ul>
 </main></html>
