--- a/Posts.html
+++ b/Posts.html
@@ -13,8 +13,9 @@
 <li><a href="Technology">Technology</a></li>
 <li><a href="Shorts">Short Stories</a></li>
 </ul>
-<p>All posts:</p>
+<p>All posts, sorted by recency:</p>
 <ul>
+<li><a href="Soft-Rules">Soft Rules</a></li>
 <li><a href="Blogging-with-Shell-Scripts-and-Markdown">Blogging with Shell Scripts and Markdown</a></li>
 <li><a href="Tesla-and-False-Advertising-In-AI">Tesla and False Advertising in AI</a></li>
 <li><a href="Critical-Thinking">Critical Thinking</a></li>
