--- a/Posts.html
+++ b/Posts.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> <html lang="en"> <head> <link rel="stylesheet" type="text/css" href="index.css"> <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400" rel="stylesheet"> <title>Posts</title> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> </head> <meta property="og:title" content="Posts | jarbus.net" /> <meta property="og:type" content="website" /> <meta property="og:url" content="https://www.jarbus.net/Posts" /> <p id="header"><a id="menuitem" href="index">Posts</a></p> <main> <hr width="80%"> <p id="menu" align="center"> <a id="menuitem" href="About">About</a> <a id="menuitem" href="Posts">Posts</a> <a id="menuitem" href="Contact">Contact</a></p>
 <p>Favorite Posts:</p>
 <ul>
+<li><a href="Would-You-Rather-Be-Uninformed-Or-Misinformed%3F">Would You Rather Be Uninformed Or Misinformed?</a></li>
 <li><a href="Short-Aftermath">Short: Aftermath</a></li>
 <li><a href="Forgiveness">Forgiveness</a></li>
 <li><a href="Anonymity">Anonymity</a></li>
@@ -15,6 +16,7 @@
 </ul>
 <p>All posts, sorted by recency:</p>
 <ul>
+<li><a href="Would-You-Rather-Be-Uninformed-Or-Misinformed%3F">Would You Rather Be Uninformed Or Misinformed?</a></li>
 <li><a href="Soft-Rules">Soft Rules</a></li>
 <li><a href="Blogging-with-Shell-Scripts-and-Markdown">Blogging with Shell Scripts and Markdown</a></li>
 <li><a href="Tesla-and-False-Advertising-In-AI">Tesla and False Advertising in AI</a></li>
