--- a/Posts.html
+++ b/Posts.html
@@ -16,6 +16,7 @@
 </ul>
 <p>All posts, sorted by recency:</p>
 <ul>
+<li><a href="Generating-Slides-In-Vim">Generating Slides In Vim</a></li>
 <li><a href="Would-You-Rather-Be-Uninformed-Or-Misinformed%3F">Would You Rather Be Uninformed Or Misinformed?</a></li>
 <li><a href="Soft-Rules">Soft Rules</a></li>
 <li><a href="Blogging-with-Shell-Scripts-and-Markdown">Blogging with Shell Scripts and Markdown</a></li>
