jarvis is desktop only for now

--- a/content/jarvis/index.html
+++ b/content/jarvis/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <h1>(jar)bus audio (vis)ualizer</h1>
-        <p>built with webGPU, runs locally.</p>
+        <p>built with webGPU, runs locally (desktop only).</p>
   <div class="controls">
     <input type="file" id="file-input" accept="audio/*" />
   </div>
