--- a/content/jarvis/index.html
+++ b/content/jarvis/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        
   <title>jarviz</title>
   <style>
     body {
@@ -10,34 +12,133 @@
       align-items: center;
       background-color: black;
       color: white;
-      padding: 20px;
+      padding: 10px;
+      margin: 0;
+      overflow-x: hidden;
     }
     canvas {
-      <!-- margin-top: 20px; -->
+      margin-top: 10px;
       background-color: black;
+      width: 100%;
+      max-width: 800px;
+      height: auto;
+      touch-action: none;
     }
     input[type="file"] {
-      margin: 20px 0;
+      margin: 10px 0;
       padding: 10px;
       background-color: black;
       color: white;
       border-radius: 4px;
       border: 1px solid white;
+      width: 100%;
+      max-width: 300px;
+    }
+    h1 {
+      color: white;
+      font-size: 1.5rem;
+      margin: 10px 0;
+    }
+    p {
+      margin: 5px 0;
     }
     .controls {
       display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 10px;
       margin: 10px 0;
+      width: 100%;
+      max-width: 800px;
+    }
+    button {
+      padding: 12px 20px;
+      background-color: black;
+      color: white;
+      border: 1px solid white;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1rem;
+      min-width: 80px;
+    }
+    button:hover {
+      background-color: #333;
+    }
+    button:active {
+      background-color: #555;
+    }
+    #pause-btn {
+      background-color: black;
+    }
+    #pause-btn.paused {
+      background-color: #333;
+    }
+    .mobile-hint {
+      margin-top: 10px;
+      color: #aaa;
+      font-size: 0.8rem;
+      text-align: center;
+    }
+    .progress-container {
+      width: 100%;
+      max-width: 800px;
+      margin: 10px 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .slider {
+      width: 100%;
+      height: 10px;
+      -webkit-appearance: none;
+      background: linear-gradient(to right, #ccffdd 0%, #ccffdd 0%, #333 0%);
+      outline: none;
+      border-radius: 5px;
+      margin: 10px 0;
+    }
+    .slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background: white;
+      cursor: pointer;
+    }
+    .slider::-moz-range-thumb {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background: white;
+      cursor: pointer;
+    }
+    .slider:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+    .time-display {
+      color: white;
+      font-size: 0.8rem;
+      margin-top: 5px;
     }
   </style>
 </head>
 <body>
+
   <h1>(jar)bus audio (vis)ualizer</h1>
         <p>built with webGPU, runs locally (desktop only).</p>
   <div class="controls">
-    <input type="file" id="file-input" accept="audio/*" />
+    <input type="file" id="file-input" accept="audio/*,.mp3,.m4a,.wav,.aac" />
+    <button id="pause-btn">Pause</button>
   </div>
   <canvas id="gpu-canvas" width="800" height="400" style="background-color: black;"></canvas>
+
+  <div class="progress-container">
+    <input type="range" id="seek-slider" min="0" max="100" value="0" step="0.1" class="slider" disabled>
+    <div class="time-display">
+      <span id="current-time">0:00</span> / <span id="duration">0:00</span>
+    </div>
+  </div>
   <script type="module" src="./index.js"></script>
 </body>
 </html>
