--- a/content/jarvis/index.html
+++ b/content/jarvis/index.html
@@ -126,7 +126,7 @@
 <body>
 
   <h1>(jar)bus audio (vis)ualizer</h1>
-        <p>built with webGPU, runs locally (desktop only).</p>
+        <p>built with webGPU, runs locally.</p>
   <div class="controls">
     <input type="file" id="file-input" accept="audio/*,.mp3,.m4a,.wav,.aac" />
     <button id="pause-btn">Pause</button>
